# frida-debugger-gradio

./: Debugger.py  FileManager.py  README.md  Untitled.ipynb  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Untitled-checkpoint.ipynb  main-checkpoint.py
flagged/: log.csv
